k8s/services/notification-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: webstaurator
spec:
  selector:
    app: notification-service
  ports:
    - port: 8086
      targetPort: 8086
  type: ClusterIP
